Add agent attach entry point and JDK5 unsupported detection
- Add AutoValhallaAttachAgent (v49) delegating to the shim via ByteBuddyAgent
- Add auto-valhalla-agent-attach module (agent + byte-buddy-agent compile deps)
- demo.runner.Main: attach via -Dauto-valhalla.attach system property
- demo5runner.Main: verify attach unsupported on JDK 5
- build.sh: add JDK5 attach-unsupported check; fix JDK28 no-preview grep
- README: document includes semantics, attach agent, sync-monitor feedback loop